Fix fact image on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,11 @@ h1,h2,h3,h4,h5,h6 {
     .fact-copy {
         line-height: 1.33;
     }
+    .fact-copy img {
+        float: none;
+        margin: 0.5em auto 1em; 
+        width: 90%;
+    }
     .fact-link a {
         font-size: 0.8em;
     }
